[gd_scene load_steps=2 format=3 uid="uid://dialogue_panel_uid"]

[ext_resource type="Script" path="res://scripts/DialoguePanel.gd" id="1_script"]

[node name="DialoguePanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -120.0
grow_horizontal = 2
grow_vertical = 0

[node name="NameLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 20.0
offset_top = 10.0
offset_right = 120.0
offset_bottom = 36.0
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
text = "Visitor Name"

[node name="TextLabel" type="RichTextLabel" parent="Panel"]
layout_mode = 0
offset_left = 20.0
offset_top = 40.0
offset_right = 620.0
offset_bottom = 110.0
text = "Hello, I am a visitor."

[node name="OptionsContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -40.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 10
alignment = 2
